feat: Add Jenkins CI/CD pipeline and deployment scripts
- Created Jenkinsfile for automated CI/CD pipeline including stages for checkout, validation, backup, build, deployment, health checks, and cleanup.
- Updated README.md to include CI/CD setup instructions and deployment guides.
- Added deploy.sh script for manual deployment with zero downtime.
- Enhanced docker-compose.yml to include Jenkins service configuration.
- Created jenkins/README.md for Jenkins configuration details and setup instructions.
- Added Jenkins configuration as code (casc.yaml) for automated job setup.
- Included required plugins list in jenkins/plugins.txt.
- Developed setup.sh script for initializing Jenkins with necessary plugins and Docker support.