@@ -39,9 +39,11 @@ Create a new security group with these rules:
 | SSH | TCP | 22 | Your IP | SSH access |
 | HTTP | TCP | 80 | 0.0.0.0/0 | Web dashboard |
 | Custom TCP | TCP | 443 | 0.0.0.0/0 | HTTPS (optional) |
+| Custom TCP | TCP | 8080 | Your IP | Jenkins (CI/CD) |
 
 ⚠️ **Security Notes:**
 - Restrict SSH (port 22) to your IP only
+- Restrict Jenkins (port 8080) to your IP only
 - Do NOT expose port 8000 (backend) or 3306 (MySQL)
 
 ### 1.5 Configure Storage
@@ -182,12 +184,14 @@ Copy the output and paste it as your SECRET_KEY.
 
 ## 🐳 Step 6: Build and Start Services
 
+### 6.1 Start Core Services (Without Jenkins)
+
 ```bash
 # Build all containers
-docker-compose build
+docker-compose build backend frontend worker
 
-# Start all services in background
-docker-compose up -d
+# Start core services in background
+docker-compose up -d db backend frontend worker
 
 # Check all services are running
 docker-compose ps
@@ -201,6 +205,35 @@ infrasentinel-db         Up (healthy)
 infrasentinel-frontend   Up
 infrasentinel-worker     Up
 ```
+
+### 6.2 Start Jenkins (Optional - For CI/CD)
+
+If you want automated deployments:
+
+```bash
+# Start Jenkins service
+docker-compose up -d jenkins
+
+# Wait for Jenkins to start (takes ~30-60 seconds)
+echo "Waiting for Jenkins to start..."
+sleep 45
+
+# Check Jenkins status
+docker-compose ps jenkins
+```
+
+Expected output:
+```
+NAME                     STATUS
+infrasentinel-jenkins    Up
+```
+
+**Access Jenkins UI:**
+```
+http://YOUR_EC2_PUBLIC_IP:8080
+```
+
+⚠️ **Note:** Make sure port 8080 is open in your Security Group (restricted to your IP).
 
 ---
 
@@ -244,9 +277,430 @@ http://YOUR_EC2_PUBLIC_IP
 
 Login with your configured admin credentials.
 
+### 7.4 Verify Jenkins (If Installed)
+
+```bash
+# Check Jenkins logs
+docker logs infrasentinel-jenkins
+
+# Verify Jenkins is accessible
+curl -I http://localhost:8080
+```
+
+Open Jenkins in browser:
+```
+http://YOUR_EC2_PUBLIC_IP:8080
+```
+
+**Default Login:**
+- Username: `admin`
+- Password: `admin123` (change immediately!)
+
 ---
 
-## 🔒 Step 8: Security Hardening
+## 🚀 Step 8: Jenkins CI/CD Setup (Optional but Recommended)
+
+Automate deployments with Jenkins for continuous integration and delivery.
+
+### 8.1 Prerequisites Check & Start Jenkins
+
+Before setting up Jenkins, ensure port 8080 is available:
+
+```bash
+# Check if port 8080 is available
+sudo netstat -tulpn | grep :8080
+# Should return nothing if port is free
+```
+
+If Jenkins wasn't started in Step 6.2, start it now:
+
+```bash
+# Jenkins is already configured in docker-compose.yml
+# Start Jenkins service
+docker-compose up -d jenkins
+
+# Wait for Jenkins to initialize (takes ~30-60 seconds)
+echo "Waiting for Jenkins to start..."
+max_attempts=60
+attempt=0
+
+while [ $attempt -lt $max_attempts ]; do
+    if curl -sf http://localhost:8080/login > /dev/null 2>&1; then
+        echo "✓ Jenkins is ready!"
+        break
+    fi
+    attempt=$((attempt + 1))
+    echo -n "."
+    sleep 2
+done
+
+# Verify Jenkins is running
+docker-compose ps jenkins
+
+# Check Jenkins logs
+docker logs --tail=20 infrasentinel-jenkins
+```
+
+### 8.2 Access Jenkins Web Interface
+
+Open in browser:
+```
+http://YOUR_EC2_PUBLIC_IP:8080
+```
+
+**Default Login Credentials:**
+- Username: `admin`
+- Password: `admin123`
+
+⚠️ **CRITICAL SECURITY STEP:** Change the password immediately after first login!
+
+### 8.3 Change Default Password (Required for Security)
+
+**Method 1: Via Jenkins UI**
+
+1. Log in to Jenkins at `http://YOUR_EC2_IP:8080`
+2. Click on `admin` (top right corner)
+3. Click `Configure`
+4. Scroll to `Password` section
+5. Enter new secure password
+6. Re-enter to confirm
+7. Click `Save`
+
+**Method 2: Via Environment Variable (Recommended for automation)**
+
+```bash
+# On your EC2 instance
+cd ~/InfraSentinel
+
+# Edit .env file
+nano .env
+
+# Add or update this line:
+JENKINS_ADMIN_PASSWORD=your-very-secure-password-here
+
+# Save and exit (Ctrl+X, Y, Enter)
+
+# Restart Jenkins to apply
+docker-compose restart jenkins
+
+# Wait for restart
+sleep 30
+```
+
+### 8.4 Verify Jenkins Job Configuration
+
+Check that the pre-configured job exists:
+
+```bash
+# Access Jenkins via CLI (optional)
+docker exec infrasentinel-jenkins jenkins-cli list-jobs
+
+# Should show: InfraSentinel-Deploy
+```
+
+**Via Web UI:**
+1. On Jenkins dashboard, you should see **`InfraSentinel-Deploy`** job
+2. Click on it to view details
+3. Click `Configure` to review pipeline settings
+
+### 8.5 Run Your First Build
+
+1. Click on **`InfraSentinel-Deploy`** job
+2. Click **`Build Now`** button (left sidebar)
+3. Watch the build progress in real-time
+4. Click on the build number (e.g., `#1`) under "Build History"
+5. Click **`Console Output`** to see detailed logs
+
+**What the build does:**
+- ✅ Validates docker-compose.yml
+- ✅ Backs up current database
+- ✅ Builds new Docker images
+- ✅ Stops old services gracefully
+- ✅ Deploys new version
+- ✅ Runs health checks
+- ✅ Auto-rollback on failure
+
+Expected build time: 5-10 minutes for first build, 2-3 minutes for subsequent builds.
+
+### 8.6 Set Up GitHub Webhook (Auto-Deploy on Push)
+
+For automatic deployments when you push code to GitHub:
+
+#### Step 1: Configure GitHub Webhook
+
+1. Go to: `https://github.com/MathewX470/InfraSentinel`
+2. Click **Settings** → **Webhooks** → **Add webhook**
+3. Configure:
+   ```
+   Payload URL: http://YOUR_EC2_PUBLIC_IP:8080/github-webhook/
+   Content type: application/json
+   Secret: (leave empty for now)
+   SSL verification: Disable SSL (unless you have HTTPS configured)
+   Which events: Just the push event
+   Active: ✓ (checked)
+   ```
+4. Click **Add webhook**
+5. GitHub will send a test ping - verify it shows a green checkmark
+
+#### Step 2: Verify Webhook on Jenkins
+
+The job is already configured for GitHub webhooks! When you push code:
+- ✅ GitHub sends webhook to Jenkins
+- ✅ Jenkins automatically triggers build
+- ✅ Builds new Docker images
+- ✅ Backs up current deployment
+- ✅ Deploys new version
+- ✅ Runs health checks
+- ✅ Rolls back on failure
+
+**Test it:**
+```bash
+# Make a small change and push
+cd ~/InfraSentinel
+echo "# Test webhook" >> README.md
+git add README.md
+git commit -m "Test Jenkins webhook"
+git push origin main
+
+# Jenkins should automatically start building!
+# View at: http://YOUR_EC2_IP:8080/job/InfraSentinel-Deploy/
+```
+
+### 8.7 Alternative: Manual Deployment Script
+
+If you prefer manual control over deployments:
+
+```bash
+# Make script executable (first time only)
+chmod +x deploy.sh
+
+# Run deployment with automatic backup & health checks
+./deploy.sh
+```
+
+**What deploy.sh does:**
+- Creates backup of database and configuration
+- Builds new Docker images
+- Deploys with zero downtime
+- Runs health checks
+- Cleans up old images and backups
+- Shows deployment status
+
+### 8.8 Jenkins Security Hardening
+
+After initial setup, secure Jenkins:
+
+**1. Change Password via Environment Variable:**
+```bash
+# Edit .env file
+nano .env
+
+# Add strong password
+JENKINS_ADMIN_PASSWORD=YourVerySecurePassword123!
+
+# Restart Jenkins
+docker-compose restart jenkins
+```
+
+**2. Restrict Port 8080 Access:**
+```bash
+# In AWS Console, update Security Group:
+# Change Jenkins port 8080 source from 0.0.0.0/0 to YOUR_IP/32
+```
+
+**3. Additional Security Measures:**
+- ✅ Restrict Jenkins port 8080 to your IP in AWS Security Group
+- ✅ Enable GitHub webhook secret (add to webhook & Jenkins credentials)
+- ✅ Regularly update Jenkins and plugins
+- ✅ Configure user authentication (LDAP/OAuth for teams)
+- ✅ Set up role-based access control for multiple users
+- ✅ Enable audit logging
+- ✅ Use HTTPS with SSL certificate (via nginx reverse proxy)
+
+### 8.9 Monitor Jenkins Build History
+
+**View Build Status:**
+```bash
+# Real-time Jenkins logs
+docker logs -f infrasentinel-jenkins
+
+# List recent builds via API
+curl -s http://localhost:8080/job/InfraSentinel-Deploy/api/json | jq '.builds[] | {number, result}'
+
+# Check last build status
+curl -s http://localhost:8080/job/InfraSentinel-Deploy/lastBuild/api/json | jq '{building, result, duration}'
+```
+
+**Via Web Interface:**
+- Dashboard shows all build history
+- Color coding: Blue = Success, Red = Failed, Yellow = Unstable
+- Click any build number to see console output
+
+### 8.10 Backup Jenkins Configuration & Data
+
+**Important - Schedule Regular Backups:**
+
+```bash
+# Backup Jenkins configuration and build history
+docker run --rm \
+  -v infrasentinel_jenkins_home:/data \
+  -v $(pwd):/backup \
+  ubuntu tar czf /backup/jenkins_backup_$(date +%Y%m%d_%H%M%S).tar.gz /data
+
+# Verify backup was created
+ls -lh jenkins_backup_*.tar.gz
+
+# Optional: Upload to S3 for safe storage
+# aws s3 cp jenkins_backup_*.tar.gz s3://your-backup-bucket/
+```
+
+**Restore Jenkins from Backup:**
+```bash
+# Stop Jenkins
+docker-compose stop jenkins
+
+# Restore data
+docker run --rm \
+  -v infrasentinel_jenkins_home:/data \
+  -v $(pwd):/backup \
+  ubuntu tar xzf /backup/jenkins_backup_YYYYMMDD_HHMMSS.tar.gz -C / --strip-components=1
+
+# Start Jenkins
+docker-compose start jenkins
+```
+
+**Automate Weekly Backups (Optional):**
+```bash
+# Create backup script
+cat << 'EOF' > /home/ubuntu/backup-jenkins.sh
+#!/bin/bash
+cd /home/ubuntu/InfraSentinel
+docker run --rm \
+  -v infrasentinel_jenkins_home:/data \
+  -v $(pwd):/backup \
+  ubuntu tar czf /backup/jenkins_backup_$(date +%Y%m%d).tar.gz /data
+
+# Keep only last 4 backups
+ls -t jenkins_backup_*.tar.gz | tail -n +5 | xargs -r rm
+EOF
+
+chmod +x /home/ubuntu/backup-jenkins.sh
+
+# Add to crontab (runs every Sunday at 2 AM)
+(crontab -l 2>/dev/null; echo "0 2 * * 0 /home/ubuntu/backup-jenkins.sh") | crontab -
+```
+
+### 8.11 Troubleshooting Jenkins
+
+**Problem: Jenkins Won't Start**
+```bash
+# Check container status
+docker-compose ps jenkins
+
+# View detailed logs
+docker logs infrasentinel-jenkins
+
+# Check if port is in use
+sudo netstat -tulpn | grep :8080
+
+# Restart Jenkins
+docker-compose restart jenkins
+
+# If still failing, recreate container
+docker-compose stop jenkins
+docker-compose rm -f jenkins
+docker-compose up -d jenkins
+```
+
+**Problem: Build Fails - Docker Permission Denied**
+```bash
+# Check if Jenkins can access Docker
+docker exec infrasentinel-jenkins docker ps
+
+# If permission denied, fix Docker socket permissions
+docker exec -u root infrasentinel-jenkins chmod 666 /var/run/docker.sock
+
+# Verify it works now
+docker exec infrasentinel-jenkins docker ps
+```
+
+**Problem: GitHub Webhook Not Triggering**
+```bash
+# Check Jenkins logs for webhook requests
+docker logs infrasentinel-jenkins | grep webhook
+
+# Verify webhook on GitHub (should show green checkmark)
+# Go to: GitHub Repo → Settings → Webhooks → Recent Deliveries
+
+# Test webhook manually
+curl -X POST http://YOUR_EC2_IP:8080/github-webhook/
+
+# Ensure Security Group allows port 8080 from GitHub IPs
+```
+
+**Problem: Pipeline Syntax Errors**
+```bash
+# Validate Jenkinsfile syntax
+docker run --rm \
+  -v $(pwd):/workspace \
+  jenkins/jenkins:lts \
+  jenkins-plugin-cli --version
+
+# Use Jenkins Pipeline Syntax Generator:
+# Visit: http://YOUR_EC2_IP:8080/pipeline-syntax/
+
+# Check console output for specific error
+# Jenkins → Job → Build # → Console Output
+```
+
+**Problem: Jenkins Running Slow**
+```bash
+# Check container resources
+docker stats infrasentinel-jenkins
+
+# Increase Java heap size
+nano docker-compose.yml
+# Add under jenkins environment:
+# JAVA_OPTS: "-Xmx1024m -XX:MaxPermSize=512m"
+
+docker-compose restart jenkins
+```
+
+**Problem: "No Space Left on Device"**
+```bash
+# Check disk space
+df -h
+
+# Clean Docker images and volumes
+docker system prune -a --volumes
+
+# Clean old Jenkins build artifacts (via UI)
+# Jenkins → Manage Jenkins → Disk Usage
+```
+
+### 8.12 Jenkins Best Practices
+
+✅ **Do's:**
+- Change default password immediately
+- Set up regular backups (daily or weekly)
+- Monitor build success rates
+- Review failed builds promptly
+- Keep Jenkins and plugins updated
+- Use environment variables for secrets
+- Enable build notifications (email/Slack)
+- Document custom pipeline changes
+
+❌ **Don'ts:**
+- Don't expose Jenkins publicly without authentication
+- Don't hardcode passwords in Jenkinsfile
+- Don't run builds as root unnecessarily
+- Don't ignore failed builds
+- Don't skip backups
+- Don't disable security features
+
+---
+
+## 🔒 Step 9: Security Hardening
 
 ### 8.1 Enable UFW Firewall
 
@@ -489,8 +943,12 @@ docker exec infrasentinel-frontend cat /etc/nginx/conf.d/infrasentinel.conf
 | View logs | `docker-compose logs -f` |
 | Rebuild | `docker-compose up -d --build` |
 | Status | `docker-compose ps` |
+| Quick deploy | `./deploy.sh` |
 | Enter backend | `docker exec -it infrasentinel-backend bash` |
 | Enter MySQL | `docker exec -it infrasentinel-db mysql -u monitor_user -p monitoring` |
+| Enter Jenkins | `docker exec -it infrasentinel-jenkins bash` |
+| Jenkins logs | `docker logs -f infrasentinel-jenkins` |
+| Trigger build | Visit `http://YOUR_IP:8080/job/InfraSentinel-Deploy/build` |
 | Restart | `docker-compose restart` |
 | Reset all | `docker-compose down -v && docker-compose up -d` |
 
@@ -498,17 +956,38 @@ docker exec infrasentinel-frontend cat /etc/nginx/conf.d/infrasentinel.conf
 
 ## ✅ Post-Deployment Checklist
 
+### Core Infrastructure
 - [ ] EC2 instance running
-- [ ] Security group configured (SSH restricted, HTTP open)
+- [ ] Security group configured (SSH restricted, HTTP open, Jenkins restricted)
 - [ ] Docker & Docker Compose installed
 - [ ] InfraSentinel deployed
 - [ ] Strong passwords set in `.env`
-- [ ] All 4 containers running
+- [ ] All containers running (db, backend, frontend, worker)
 - [ ] Dashboard accessible via browser
 - [ ] Host processes visible (systemd, sshd, etc.)
+
+### Security
 - [ ] UFW firewall enabled
-- [ ] (Optional) HTTPS configured
-- [ ] (Optional) Domain name configured
+- [ ] Admin password changed from default
+- [ ] SSH key-only authentication
+- [ ] Port 8000 (backend) not exposed
+- [ ] Port 3306 (MySQL) not exposed
+
+### Jenkins CI/CD (Optional)
+- [ ] Jenkins container running
+- [ ] Jenkins accessible at port 8080
+- [ ] Jenkins admin password changed
+- [ ] InfraSentinel-Deploy job configured
+- [ ] GitHub webhook set up (if using auto-deploy)
+- [ ] First successful build completed
+- [ ] Jenkins backup configured
+
+### Optional Enhancements
+- [ ] HTTPS configured with SSL certificate
+- [ ] Domain name configured
+- [ ] CloudWatch monitoring enabled
+- [ ] S3 backup configured
+- [ ] Elastic IP assigned
 
 ---
 
